--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="/static/css/<%=cacheTimeStamps.css%>/style.css" type="text/css">
 	<title></title>
+  <script src="socket.io/socket.io.js"></script>
 </head>
 <body>
 	<div id="last-activity">
